samples/_failures_safe/1761355541_478be7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_039daef2.c: In function ‘main’:
./samples/SAFE/__tmp_039daef2.c:161:28: error: expected ‘)’ at end of input
  161 |     if (!compress_data(&ctx
      |                       ~    ^
      |                            )
./samples/SAFE/__tmp_039daef2.c:161:5: error: expected declaration or statement at end of input
  161 |     if (!compress_data(&ctx
      |     ^~
